# bgu-projects-archive

./: README.md
cupinator/documentation/: Cupinator.docx
cupinator/msg/: WalkCommand.msg
cupinator/scripts/: CtrlNode.py  CupRec.py  CupRec.py~  RoomScanner.py  RoomScanner.py~  Walk.py  Walk.py~
cupinator/srv/: CupRecQuery.srv~
greet hello by vision 2014/: project summary.docx
greet hello by vision 2014/src/: CMakeLists.txt  package.xml
greet hello by vision 2014/src/src/: FaceDetector.cpp  FaceDetector.h  rob.cpp
komodoplan152/documentation/: KomodoPlan.docx  domain.pddl  problem.pddl.txt
